UNRELEASED

  * Added support for channel keys.
  * 422 message is now sent after registration when no MOTD is available.
  * Added support for WALLOPS command.

0.3 2011-08-25

  * Added --debug flag.
  * Added optional logging of channel messages to file.
  * Send a 251 message upon registration to please Pidgin.
  * Understand but ignore AWAY messages.
  * Various code cleanup.

0.2.0 2003-12-12

  * Added switch for specifying a MOTD file.
  * Added WHOIS and MOTD commands.

0.1.1 2003-12-09

  * Handle bad port specification nicely.
  * Minor cleanups.

0.1.0 2003-12-03

  * First released version.

0.0.0 autumn, 2003

  * [Internal usage.]