@@ -1,0 +1,6 @@
+#!/bin/sh
+
+set -e
+
+pyflakes miniircd test.py
+nosetests
