@@ -3,6 +3,7 @@ UNRELEASED
   * Added support for channel keys.
   * 422 message is now sent after registration when no MOTD is available.
   * Added support for WALLOPS command.
+  * Added option to store persistent state (currently channel topic and key).
 
 0.3 2011-08-25
 
